Added Maven Javax Servlet dependency

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
+
+        <!-- Javax Servlet (Request/Response) -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>OCR4all_Web</finalName>
