Added JSTL tag library

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,20 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- JSTL tag library -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Jackson Core (JSON helper) -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
