--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.3</version>
+        </dependency>
         <!-- Javax Servlet (Request/Response) -->
         <dependency>
             <groupId>javax.servlet</groupId>
