Implemented first version of asynchronous stream communication
- Updated version of Spring framework
- Updated web-app version
- Enabled async support and increased default timeout
- Added streaming response in controller
- Improved and adapted current PreprocessingHelper
- Added XHR call to controller in JSP

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_ID" version="2.4"
-    xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+<web-app version="3.0" 
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+         http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
     <display-name>Archetype Created Web Application</display-name>
     <servlet>
@@ -10,6 +12,8 @@
             org.springframework.web.servlet.DispatcherServlet
         </servlet-class>
         <load-on-startup>1</load-on-startup>
+        <!-- Enable asynchronous requests -->
+        <async-supported>true</async-supported>
     </servlet>
 
     <servlet-mapping>
