--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,15 @@
             <version>2.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.im4java/im4java -->
+        <dependency>
+         <groupId>org.im4java</groupId>
+         <artifactId>im4java</artifactId>
+         <version>1.4.0</version>
+        </dependency>
+        
     </dependencies>
-
+    
     <build>
         <finalName>OCR4all_Web</finalName>
     </build>
