--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
             <version>2.0</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.openpnp/opencv -->
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.2.0-1</version>
+        </dependency>
     </dependencies>
     
     <build>
