Updated servlet API in pom.xml to newer version
- New necessary functionalities are implemented

--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,8 @@
         <!-- Javax Servlet (Request/Response) -->
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
         <!-- Javax Servlet (JSP due to Tomcat dependency) -->
