Temporarily disabled Nashi

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,8 +9,8 @@ command=/usr/share/tomcat8/bin/catalina.sh run
 autostart=true
 autorestart=true
 
-[program:flask]
-directory=/opt/OCR4all_Web/src/main/resources/nashi/server
-command=flask run --host=0.0.0.0
-autostart=true
-autorestart=true
+;[program:flask]
+;directory=/opt/OCR4all_Web/src/main/resources/nashi/server
+;command=flask run --host=0.0.0.0
+;autostart=true
+;autorestart=true
