--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "src/main/resources/ocropy"]
-	path = src/main/resources/ocropy
+	path = submodules/ocropy
 	url = https://gitlab2.informatik.uni-wuerzburg.de/chr58bk/mptv.git
 [submodule "src/main/resources/LAREX"]
-	path = src/main/resources/LAREX
+	path = submodules/LAREX
 	url = https://github.com/chreul/LAREX.git
 [submodule "src/main/resources/GTC_Web"]
-	path = src/main/resources/GTC_Web
+	path = submodules/GTC_Web
 	url = https://gitlab2.informatik.uni-wuerzburg.de/chr58bk/GTC_Web_NeuUndGscheid.git
 [submodule "src/main/resources/calamari"]
-	path = src/main/resources/calamari
+	path = submodules/calamari
 	url = https://github.com/ChWick/calamari.git
 [submodule "src/main/resources/ocr4all_models"]
-	path = src/main/resources/ocr4all_models
+	path = submodules/ocr4all_models
 	url = https://github.com/Calamari-OCR/ocr4all_models.git
 [submodule "src/main/resources/nashi"]
-	path = src/main/resources/nashi
+	path = submodules/nashi
 	url = https://github.com/andbue/nashi.git
