--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,16 @@
             <artifactId>opencv</artifactId>
             <version>3.2.0-1</version>
         </dependency>
+
+        <!-- PDFBox https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.15</version>
+        </dependency>
     </dependencies>
+
+
 
 
     <distributionManagement>
