--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>de.uniwue</groupId>
     <artifactId>OCR4all_Web</artifactId>
     <packaging>war</packaging>
-    <version>0.2.2d-1</version>
+    <version>0.3-RC1</version>
     <name>OCR4all_Web Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
