--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <name>OCR4all Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.3.2.RELEASE</version>
+    </parent>
+
     <properties>
         <spring.version>4.3.18.RELEASE</spring.version>
 
@@ -26,19 +32,12 @@
 
         <!-- Spring dependencies -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
 
         <!-- JSTL tag library -->
@@ -74,27 +73,16 @@
             <artifactId>commons-exec</artifactId>
             <version>1.3</version>
         </dependency>
-
-        <!-- Javax Servlet (Request/Response) -->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
             <scope>provided</scope>
         </dependency>
-        <!-- Javax Servlet (JSP due to Tomcat dependency) -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.0</version>
-            <scope>provided</scope>
-        </dependency>
-
         <!-- OpenCV (https://mvnrepository.com/artifact/org.openpnp/opencv) -->
         <dependency>
             <groupId>org.openpnp</groupId>
             <artifactId>opencv</artifactId>
-            <version>3.2.0-1</version>
+            <version>3.4.2-2</version>
         </dependency>
 
         <!-- PDFBox https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
@@ -175,5 +163,11 @@
 
     <build>
         <finalName>ocr4all</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
