--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.10.0</version>
+        </dependency>
         <!-- Apache Commons IO -->
         <dependency>
             <groupId>commons-io</groupId>
