--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <artifactId>jai-imageio-jpeg2000</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <!-- docx4j is a library which helps you to work with the Office Open XML file format as used in docx documents, pptx presentations, and xlsx spreadsheets. -->
+        <dependency>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j-JAXB-Internal</artifactId>
+            <version>8.3.1</version>
+        </dependency>
         <!-- PAGE XML -->
         <dependency>
             <groupId>org.primaresearch</groupId>
