--- a/pom.xml
+++ b/pom.xml
@@ -186,5 +186,12 @@
 
     <build>
         <finalName>ocr4all</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+        </plugins>
     </build>
 </project>
